<resources>
    <string name="app_name">Our Closet app</string>
    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>

    <string name="shirt_option">shirt</string>
    <string name="socks_option">Socks</string>
    <string name="enter_a_brand">Enter a Brand</string>
    <string name="name">Name</string>
    <string name="enter_a_type">Enter a Type</string>
    <string name="enter_a_material">Enter a Material</string>
    <string name="select_a_size">Select a Size</string>
    <string name="enter_a_description">Enter a Description...</string>
    <string name="pants_size_one">##</string>
    <string name="pants_middle_value">X</string>
    <string name="pants_size_two">##</string>
    <string name="pattern">Pattern</string>
    <string name="color_1">Color 1</string>
    <string name="color_2">Color 2</string>
    <string name="select_an_occasion">Select an Occasion</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="closet_is_empty">Closet is Empty</string>
    <string name="search">Search...</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="your_key">Your Key</string>
    <string name="sharing_your_closet_with">Sharing your closet with:</string>
    <string name="enter_key">Enter Key...</string>
    <string name="enter_key_button">Enter Key</string>
    <string name="enter_friend_s_key">Enter Friend\'s key</string>
    <string name="fit">Fit</string>
    <string name="fullName" />
    <string name="register">register</string>
    <string name="colors">Colors</string>
    <string name="type_of_clothing">Type of Clothing</string>
    <string name="done">Done</string>
    <string name="add_types">Add Types</string>
    <string name="list_of_types">List of Types</string>
    <string name="added_types">Added Types</string>
    <string name="save_types">Save Types</string>
    <string name="change_Password"><u>Change password?</u>.</string>
    <string name="Winter">Winter\n(39\uFE64)</string>
    <string name="add"><u>Add</u></string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="startDate"><u>Start Date:</u></string>
    <string name="endDate"><u>End Date:</u></string>

</resources>