<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectTypes">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/list_of_types"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewListTypes"
        android:layout_width="382dp"
        android:layout_height="208dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/added_types"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewListTypes"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewListTypes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAddedTypes"
        android:layout_width="381dp"
        android:layout_height="255dp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/buttonSaveTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_types"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewAddedTypes"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewAddedTypes"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewAddedTypes" />
</androidx.constraintlayout.widget.ConstraintLayout>